<resources>
    <string name="app_name">RUNSCANNER</string>
    <string name="gallery_button">Gallery</string>
    <string name="photo_button">Photo</string>
    <string name="scan_button">Go to Scan!</string>
    <string name="distance_value_label">Distance</string>
    <string name="calories_value_label">Calories</string>
    <string name="duration_value_label">Duration</string>
    <string name="avg_pace_value_label">Avg pace</string>
    <string name="avg_heart_rate_value_label">Avg Heart Rate</string>
    <string name="result_run_distance">Distance : %1$s miles</string>
    <string name="result_run_duration">Duration  : %1$s</string>
    <string name="no_run_message">You have no Runs!</string>
    <string name="statistics_title">Stats</string>
    <string name="user_title">User</string>
    <string name="share_title">Share</string>
    <string name="runlist_title">Run List</string>
    <string name="menu_item_this_week">this week</string>
    <string name="menu_item_this_month">this month</string>
    <string name="menu_item_this_year">this year</string>
</resources>
