<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_button" />

        <Button
            android:id="@+id/photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_button" />

    </LinearLayout>

    <ImageView
        android:id="@+id/run_photo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"
        android:scaleType="centerInside" />

    <Button
        android:id="@+id/dummy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_button" />

</LinearLayout>
