<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/run_photo"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/surface"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            tools:layout_conversion_absoluteHeight="320dp"
            tools:layout_conversion_absoluteWidth="320dp" />

        <Button
            android:id="@+id/dummy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/scan_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="98dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_value_label"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="48dp"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="430dp" />

        <EditText
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="21dp"
            tools:layout_editor_absoluteX="187dp"
            tools:layout_editor_absoluteY="416dp" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_value_label"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="45dp"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="430dp" />

        <EditText
            android:id="@+id/calories_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="21dp"
            tools:layout_editor_absoluteX="252dp"
            tools:layout_editor_absoluteY="416dp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_value_label"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="47dp"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="475dp" />

        <EditText
            android:id="@+id/duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="21dp"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="461dp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_pace_value_label"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="51dp"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="475dp" />

        <EditText
            android:id="@+id/avg_pace_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="21dp"
            tools:layout_editor_absoluteX="254dp"
            tools:layout_editor_absoluteY="461dp" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_heart_rate_value_label"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="82dp"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="520dp" />

        <EditText
            android:id="@+id/avg_heart_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="21dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="506dp" />

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:buttonStyle="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/gallery_button"
            android:textColor="@color/onBackground"
            app:layout_constraintEnd_toStartOf="@+id/photo_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/photo_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:buttonStyle="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/photo_button"
            android:textColor="@color/onBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/gallery_button"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gallery_button" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/primary"
            app:layout_constraintBottom_toBottomOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="@+id/photo_button"
            app:layout_constraintStart_toStartOf="@+id/gallery_button"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/done_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_done"
        android:tint="#ffffff" />
</FrameLayout>


